deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ronro-pilot
  labels:
    app.kubernetes.io/name: ronro
    app.kubernetes.io/part-of: ronro-pilot
