deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ronro-pilot
  labels:
    app.kubernetes.io/name: ronro
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ronro
    app.kubernetes.io/part-of: ronro-service-demo
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
    - name: websocket
      port: 8765
      targetPort: websocket
      protocol: TCP
